# CreateAndUseLibraries

./: CMakeLists.txt  CMakePresets.json  README.md
CMakeUtils/Handy/: DisplayGenericInfo.cmake
CMakeUtils/Package/: InstallPackage.cmake  LibrarySuiteConfig.cmake.in
CMakeUtils/Presets/: SingleConfigGenerators.json
HeaderLibNeedsCpp14/: CMakeLists.txt
HeaderLibNeedsCpp14/include/: HeaderLib.hpp  HeaderLibApi.hpp
SharedLibNeedsCpp17/: CMakeLists.txt
SharedLibNeedsCpp17/hdr/: SharedLibPrivate.hpp
SharedLibNeedsCpp17/include/: AutoGeneratedSharedLibExports.hpp  SharedLibApi.hpp
SharedLibNeedsCpp17/src/: SharedLibApi.cpp  SharedLibPrivate.cpp
SharedOrStaticLibNeedsCpp17/: CMakeLists.txt
SharedOrStaticLibNeedsCpp17/hdr/: SharedOrStaticLibPrivate.hpp
SharedOrStaticLibNeedsCpp17/include/: AutoGeneratedSharedOrStaticLibExports.hpp  SharedOrStaticLibApi.hpp
SharedOrStaticLibNeedsCpp17/src/: SharedOrStaticLibApi.cpp  SharedOrStaticLibPrivate.cpp
StaticLibNeedsCpp20/: CMakeLists.txt
StaticLibNeedsCpp20/hdr/: StaticLibPrivate.hpp
StaticLibNeedsCpp20/include/: StaticLibApi.hpp
StaticLibNeedsCpp20/src/: StaticLibApi.cpp  StaticLibPrivate.cpp
UseCreatedLibsNeedsCpp11/: CMakeLists.txt
UseCreatedLibsNeedsCpp11/hdr/: UseCreatedLibraries.hpp
UseCreatedLibsNeedsCpp11/src/: MainUseCreatedLibraries.cpp  UseCreatedLibraries.cpp
